Remove unnecessary tags section from hs-reflections.html

--- a/hs-reflections.html
+++ b/hs-reflections.html
@@ -205,7 +205,7 @@ you're working, most things have some sort of deliverable that needs to be
 delivered at some specific time. Hacker School gave me the luxury of focusing
 on the journey itself.</p>
 	<hr/>
-	<h6>Category: <a href="/category/hacker-school.html">Hacker School</a>. Tags: <a href="/tag/.html"></a>, </h6>
+	<h6>Category: <a href="/category/hacker-school.html">Hacker School</a>.</h6>
 </article>
 
 <hr/>
