--- a/authors.html
+++ b/authors.html
@@ -115,7 +115,10 @@
 					<div class="row">
 						<!-- Main Content -->
 						<div class="medium-9 small-12 columns" role="content">
-    <h1>Authors on Katrina Ellison Geltman</h1>        <li><a href="/author/katrina-ellison-geltman.html">Katrina Ellison Geltman</a> (9)</li>
+    <h1>Authors on Katrina Ellison Geltman</h1>
+
+    <ul>        <li><a href="/author/katrina-ellison-geltman.html">Katrina Ellison Geltman</a> (9)</li>
+    </ul>
 						</div>
 						<!-- End Main Content -->
 						<!-- Sidebar -->
