Fix broken link on pages/seating-chart.html

--- a/pages/seating-chart.html
+++ b/pages/seating-chart.html
@@ -142,7 +142,7 @@ of <code>tables.csv</code>.</p>
 <p>The seating chart is created by populating the days' fields in
 the person objects and the lists of people in the table objects.
 An initial, random solution is generated, and then 
-<a href="{filename}/0002-sim-anneal-overview.md">simulated annealing</a>
+<a href="/simulated-annealing.html">simulated annealing</a>
 is used to refine that solution until an optimum is reached.
 The <code>anneal</code> function switches people around, looking for
 better solutions, according to specific annealing parameters.</p>
