--- a/simulated-annealing.html
+++ b/simulated-annealing.html
@@ -320,37 +320,7 @@ solution works admirably. It is my heuristic method of choice."</p>
 from <a href="http://www.cs.nott.ac.uk/~gxk/aim/">Graham Kendall</a> at Nottingham University
 and on Steven Skiena's <a href="http://www.algorist.com/">Algorithm Design Manual</a>. Another excellent source is the 
 1983 paper <a href="http://home.gwu.edu/~stroud/classics/KirkpatrickGelattVecchi83.pdf">"Optimization by Simulated Annealing"</a> by Kirkpatrick, Gelatti,
-and Vecchi. It's a bit dense, but relatively readable for an academic paper.</p><script type= "text/javascript">
-    if (!document.getElementById('mathjaxscript_pelican_#%@#$@#')) {
-        var mathjaxscript = document.createElement('script');
-        mathjaxscript.id = 'mathjaxscript_pelican_#%@#$@#';
-        mathjaxscript.type = 'text/javascript';
-        mathjaxscript.src = 'https:' == document.location.protocol
-                ? 'https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'
-                : 'http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML';
-        mathjaxscript[(window.opera ? "innerHTML" : "text")] =
-            "MathJax.Hub.Config({" +
-            "    config: ['MMLorHTML.js']," +
-            "    TeX: { extensions: ['AMSmath.js','AMSsymbols.js','noErrors.js','noUndefined.js'], equationNumbers: { autoNumber: 'AMS' } }," +
-            "    jax: ['input/TeX','input/MathML','output/HTML-CSS']," +
-            "    extensions: ['tex2jax.js','mml2jax.js','MathMenu.js','MathZoom.js']," +
-            "    displayAlign: 'center'," +
-            "    displayIndent: '0em'," +
-            "    showMathMenu: true," +
-            "    tex2jax: { " +
-            "        inlineMath: [ ['$','$'] ], " +
-            "        displayMath: [ ['$$','$$'] ]," +
-            "        processEscapes: true," +
-            "        preview: 'TeX'," +
-            "    }, " +
-            "    'HTML-CSS': { " +
-            "        styles: { '.MathJax_Display, .MathJax .mo, .MathJax .mi, .MathJax .mn': {color: 'black ! important'} }" +
-            "    } " +
-            "}); ";
-        (document.body || document.getElementsByTagName('head')[0]).appendChild(mathjaxscript);
-    }
-</script>
-
+and Vecchi. It's a bit dense, but relatively readable for an academic paper.</p>
 	<hr/>
 	<h6>Category: <a href="/category/how-to.html">How-to</a>. Tags: <a href="/tag/seating-chart.html">Seating Chart</a>, <a href="/tag/algorithms.html">Algorithms</a>, </h6>
 </article>
