--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -123,37 +123,14 @@
 							</div>
 <div class="row">
 	<div class="small-12 columns">
-		<p>I'm a current student at 
-<a href="http://www.hackerschool.com" title="Hacker School">Hacker School</a> in
-New York City. It's my first big commitment after a multi-year 
-period of medical leave,
-during which programming was one of the (multiple) things I
-explored on my own. I applied to Hacker School because I felt like
-I would learn more if I was in a community of smart, helpful
-people.</p>
-<p>I have some miscellaneous computer
-science/software experience, but no deep knowledge. 
-While I'm here, I want to:</p>
-<ul>
-<li>
-<p>Fill in some gaps
-(learn a statically typed language, use git correctly),</p>
-</li>
-<li>
-<p>Finish a 'real' project, </p>
-</li>
-<li>
-<p>Explore some cool stuff (right now I'm curious
-about algorithms, the Linux kernel, and distributed computing),</p>
-</li>
-<li>
-<p>Generally sharpen my skills (I wrote in my application that I
-wanted to become a Python ninja). </p>
-</li>
-</ul>
-<p>I live with my husband in central Missouri. When I'm not at Hacker
-School, you'll find me traveling up and down the East Coast to
-visit all of my local friends and family.</p>
+		<p>I'm a software developer at <a href="http://www.photoshelter.com">PhotoShelter</a>.
+My first year here, I was the lead backend developer for
+<a href="http://www.photoshelter.com/lattice">PhotoShelter Lattice</a>,
+building out our HTTP API and overhauling our image search algorithm.
+More recently, I've been working on video delivery for our
+<a href="http://www.photoshelter.com/libris">Libris</a> product.</p>
+<p>Previously, I was a student at <a href="http://www.recurse.com">Recurse Center</a>.
+I have a degree in mechanical engineering from MIT.</p>
 	</div>
 </div>
 						</div>
