--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -123,13 +123,12 @@
 							</div>
 <div class="row">
 	<div class="small-12 columns">
-		<p>I'm a software developer at <a href="http://www.photoshelter.com">PhotoShelter</a>.
-My first year here, I was the lead backend developer for
-<a href="http://www.photoshelter.com/lattice">PhotoShelter Lattice</a>,
-building out our HTTP API and overhauling our image search algorithm.
-More recently, I've been working on video delivery for our
-<a href="http://www.photoshelter.com/libris">Libris</a> product.</p>
-<p>Previously, I was a student at <a href="http://www.recurse.com">Recurse Center</a>.
+		<p>I'm a software developer at <a href="https://www.digitalocean.com">DigitalOcean</a>.
+		  I work on the Compute team, writing software that runs on our hypervisors.</p>
+
+		 <p>I previously worked at <a href="https://www.bondstreet.com">Bond Street</a> and <a href="https://www.photoshelter.com">PhotoShelter</a>.</p>
+
+<p>My most recent educational experience was at <a href="http://www.recurse.com">Recurse Center</a>.
 I have a degree in mechanical engineering from MIT.</p>
 	</div>
 </div>
@@ -150,7 +149,7 @@ I have a degree in mechanical engineering from MIT.</p>
 								  <p style="margin-bottom:0px;"><a href="http://www.slideshare.net/kellison00">SlideShare</a></p>
 							</div>
 
-							<!-- 
+							<!--
 							<div class="panel">
 								<h5>Tags</h5>
 								<ul class="tag-cloud">
