Update About Me page

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -106,7 +106,8 @@
 							</div>
 <div class="row">
 	<div class="small-12 columns">
-		<p>I'm a software developer specializing in infrastructure and backend.
+		<p>I'm a software developer specializing in infrastructure, backend,
+production engineering, and financial systems.
 I'm currently taking time off to be with my family.</p>
 <p>I previously worked at <a href="https://www.goldmansachs.com">Goldman Sachs</a>, <a href="https://www.digitalocean.com">DigitalOcean</a>, <a href="https://www.bondstreet.com">Bond Street</a>, and <a href="https://www.photoshelter.com">PhotoShelter</a>.</p>
 <p>My most recent educational experience was at <a href="https://www.recurse.com">Recurse
